# manopt_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: adaptive_linesearch.hpp  common.hpp  conjugate_gradient.hpp  cost_func.hpp  euclidean.hpp  loss.hpp  lrucache.hpp  manifold.hpp  minimizer.hpp  problem.hpp  product_manifold.hpp  rotation.hpp  sphere.hpp  tcg.hpp  trust_region.hpp
src/: common.cc  loss.cc  main.cc  minimizer.cc  rayleigh_quotient_test.cc  tcg.cc  tcg_test.cc  tr_test.cc
